--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 version: "3"
 services:
-  selenium-hub:
-    image: selenium/hub:4.23.0-20240727
-    container_name: selenium-hub
-    ports:
-      - "4442:4442"
-      - "4443:4443"
-      - "4444:4444"
-
   chrome:
-    image: selenium/standalone-chrome:4.23.0-20240727
+    image: selenium/node-chrome:4.23.1-20240813
+    shm_size: 2gb
+    depends_on:
+      - selenium-hub
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+
+  edge:
+    image: selenium/node-edge:4.23.1-20240813
     shm_size: 2gb
     depends_on:
       - selenium-hub
@@ -19,7 +21,7 @@ services:
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
 
   firefox:
-    image: selenium/standalone-firefox:4.23.0-20240727
+    image: selenium/node-firefox:4.23.1-20240813
     shm_size: 2gb
     depends_on:
       - selenium-hub
@@ -27,12 +29,11 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-  edge:
-    image: selenium/standalone-edge:4.23.0-20240727
-    shm_size: 2gb
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+
+  selenium-hub:
+    image: selenium/hub:4.23.1-20240813
+    container_name: selenium-hub
+    ports:
+      - "4442:4442"
+      - "4443:4443"
+      - "4444:4444"
